--- a/style/style.css
+++ b/style/style.css
@@ -1408,20 +1408,8 @@ header {
     transform: scale(0.6);
   }
   .team__banner p {
-    top: 2rem;
-    font-size: 2.2rem;
-  }
-}
-@media screen and (max-width: 376px) {
-  .team__banner {
-    transform: scale(0.8);
-  }
-  .team__banner p {
-    top: 2.3rem;
-    font-size: 1.8rem;
-  }
-  .team .banner-core {
-    transform: scale(0.8);
+    top: 1.8rem;
+    font-size: 2.8rem;
   }
 }
 @media only screen and (min-width: 768px) {
@@ -2050,7 +2038,7 @@ header {
   display: grid;
   grid-template-columns: 1fr;
   row-gap: 4.8rem;
-  grid-template-areas: "logo" "navigation" "social-media" "info-link";
+  grid-template-areas: "logo" "navigation" "social-media" "info-links";
 }
 .footer ul {
   list-style: none;
@@ -2063,6 +2051,9 @@ header {
   gap: 0.6rem;
   border-bottom: 1px solid rgba(30, 30, 30, 0.5019607843);
   padding-bottom: 3.6rem;
+}
+.footer__logo a {
+  width: fit-content;
 }
 .footer__logo a h2 {
   font-size: 2rem;
@@ -2107,28 +2098,26 @@ header {
   justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
-  gap: 1.8rem;
+  gap: 0.8rem;
+  row-gap: 2.4rem;
+}
+.footer__social ul li {
+  flex-basis: 25%;
 }
 .footer__social ul li a {
-  width: 4.4rem;
-  height: 4.4rem;
+  width: 3rem;
+  height: 3rem;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
-  border-radius: 50%;
-  transition: all 0.3s ease-in-out;
-}
-.footer__social ul li a:hover {
-  background-color: #ededed;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1254901961), -2px -2px 12px #f3f3f3;
 }
 .footer__social ul li a img {
-  width: 3.2rem;
-  height: 3.2rem;
+  width: 3rem;
+  height: 3rem;
 }
 .footer__info-links {
-  grid-area: info-link;
+  grid-area: info-links;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -2155,11 +2144,19 @@ header {
   color: #6b6b6b;
 }
 
+@media screen and (min-width: 375px) {
+  .footer__social ul {
+    gap: 1.6rem;
+  }
+  .footer__social ul li {
+    flex-basis: 0;
+  }
+}
 @media screen and (min-width: 768px) {
   .footer {
     padding: 8.4rem 3rem 4.2rem 3rem;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: "logo navigation" "social-media info-link";
+    grid-template-areas: "logo navigation" "social-media info-links";
   }
   .footer__logo {
     border-bottom: none;
@@ -2183,8 +2180,21 @@ header {
   .footer__navigation ul li a:hover {
     color: #6b6b6b;
   }
+  .footer__social ul li a {
+    width: 4.2rem;
+    height: 4.2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: all 0.3s ease-in-out;
+  }
+  .footer__social ul li a:hover {
+    background-color: #ededed;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1254901961), -2px -2px 12px #f3f3f3;
+  }
   .footer__info-links {
-    grid-area: info-link;
     justify-content: flex-end;
   }
   .footer__info-links ul {
